<resources>
    <string name="app_name" translatable="false">Barber\'s House</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="error_message">An error ccourred</string>
    <string name="reset_password_email">Reset password email sent</string>
    <string name="empty_textboxes">Not everything is filled</string>
    <string name="upload_data_error">Error while uploading data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">Birthday</string>
    <string name="login">Login</string>
    <string name="signup">Create New Account</string>
    <string name="guest_login">Continue As Guest</string>
    <string name="or">OR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="reviews">Reviews:</string>
    <string name="notif_title">Welcome to your Barber House</string>
    <string name="upload_title">Uploading...</string>
    <string name="upload_message">A new post Iis being uploaded</string>
    <string name="double_post">A new post is already being uploaded</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="select_picture">Select picture</string>
    <string name="permission">Please accept permissions for that request</string>
    <string name="pictures_count">Pictures count:</string>
    <string name="new_review">New review has been published</string>
    <string name="update_successful">Update successful</string>
    <string name="update_failed">Update failed</string>
    <string name="guest">Guest</string>
    <string name="welcome">Welcome</string>
    <string name="take_picture">Take Picture</string>
    <string name="choose_picture">Choose picture From gallery</string>
    <string name="cancel">Cancel</string>
    <string name="upload_pictures_title">Choose your barber shop pictures</string>
    <string name="guest_error">You must login to use this function</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="barber_remove">Barber Shop removed!</string>
    <string name="signin_successful">Sign In successful</string>
    <string name="signin_failed">Sign In failed</string>
    <string name="empty_texts">Please fill all the text boxes</string>
    <string name="signup_successful">Sign Up successful</string>
    <string name="signup_failed">Sign Up failed</string>
    <string name="equal_passwords_empty_boxes">Please fill all the text boxes and make sure passwords are equal</string>
    <string name="submit">Submit</string>
    <string name="add_review">Add Review</string>
    <string name="review_hint">Your comment...</string>
    <string name="barbershop_name">Barber Shop Title</string>
    <string name="barbershop_subtitle">Baber Shop Subtitle</string>
    <string name="search">Search</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="website">Website</string>
    <string name="add_barber_shop">Add Barber Shop</string>
    <string name="push_new_review">A new review added</string>
    <string name="post">Post</string>
    <string name="edit_barber">Edit</string>
    <string name="barbershop_type">Barber Shop type</string>
    <string name="atleast_one_picture">You must add at least one picture</string>
    <string name="account_deleted">Account deleted !</string>
    <string name="profile_picture_chaneged">Profile picture changed !</string>
    <string name="new_password">New Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="delete_account_question">Are you sure you wish to delete your account?</string>
    <string name="delete_account">Delete Account</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="my_account">My Account</string>
    <string name="update_info">Update your basic info, email and password</string>
    <string name="change_profile_picture_text">Change your profile picture</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="norifications_pref">Recieve notifications about new reviews</string>
    <string name="all_barber_shops">All Barber Shops</string>
    <string name="my_barber_shops">My Barber Shops</string>
    <string name="personal_submenu">Personal Submenu</string>
    <string name="settings_submenu">Settings Submenu</string>
    <string name="settings">Settings</string>
    <string name="basic_Information">Basic Information</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="account_settings">Account Settings</string>
    <string name="notifications">Notifications</string>
    <string name="edit_my_barberss">Edit My Barber\'s</string>
    <string name="add">Add</string>
    <string name="distance">km</string>
</resources>