<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:background="@drawable/black_transient"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/assistant_semi_bold"
        android:text="@string/forget_password"
        android:textColor="@color/White"
        android:textSize="25sp" />

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/White"
        android:backgroundTint="@color/White"
        android:layout_marginVertical="5dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:id="@+id/forgot_password_email"/>

    <Button

        android:id="@+id/send_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/assistant_regular"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/shape_selector_yellowapp"
        android:textColor="@color/Black"
        android:text="@string/reset" />


</LinearLayout>
