<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_splash"
    android:orientation="vertical">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:fontFamily="@font/agency"
                android:textColor="@color/YellowApp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/edit_my_barberss"/>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="40dp"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/name_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/YellowApp"
                    android:hint="@string/barbershop_name"
                    android:padding="5dp"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:textSize="17.5sp" />

                <EditText
                    android:layout_marginTop="30dp"
                    android:padding="5dp"
                    android:textSize="17.5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/White"
                    android:textColor="@color/White"
                    android:backgroundTint="@color/YellowApp"
                    android:hint="@string/barbershop_type"
                    android:id="@+id/edit_type_et"/>

                <EditText
                    android:id="@+id/city_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/YellowApp"
                    android:hint="@string/city"
                    android:padding="5dp"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:textSize="17.5sp" />

                <EditText
                    android:id="@+id/address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/YellowApp"
                    android:hint="@string/address"
                    android:padding="5dp"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:textSize="17.5sp" />

                <EditText
                    android:id="@+id/phone_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/YellowApp"
                    android:hint="@string/phone_number"
                    android:padding="5dp"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:textSize="17.5sp" />


                <EditText
                    android:id="@+id/website_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/YellowApp"
                    android:hint="@string/website"
                    android:padding="5dp"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White"
                    android:textSize="17.5sp" />


                <ImageButton
                    android:id="@+id/upload_button"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_selector_transparent"
                    android:padding="5dp"
                    android:src="@drawable/ic_baseline_add_a_photo_orange_24"/>


                <TextView
                    android:id="@+id/pictures_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/upload_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="10dp"
                    android:fontFamily="@font/assistant_light"
                    android:layout_marginTop="30dp"
                    android:padding="5dp"
                    android:text="@string/pictures_count"
                    android:textColor="@color/White"
                    android:textSize="17.5sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerview_pics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/finish_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/shape_selector_yellowapp"
                    android:padding="5dp"
                    android:text="@string/edit_barber"
                    android:fontFamily="@font/assistant_regular"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
